demo02/apply-sonarqube/sonarqube-deploy-without-multibranch.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: sonarqube
  namespace: sonarqube
spec:
  selector:
    matchLabels:
      name: sonarqube
  replicas: 1
  template:
    metadata:
      name: sonarqube
      labels:
        name: sonarqube
    spec:
      containers:
        - image: sonarqube:10.5.1-community
          args:
            - -Dsonar.web.context=/sonar
          name: sonarqube
          ports:
            - containerPort: 9000
              name: sonarqube
          volumeMounts:
            - name: sonarqube-extensions
              mountPath: /opt/sonarqube/extensions
            - name: sonarqube-logs
              mountPath: /opt/sonarqube/logs
            - name: sonarqube-conf
              mountPath: /opt/sonarqube/conf
            - name: sonarqube-data
              mountPath: /opt/sonarqube/data
          resources:
            limits:
              cpu: 1000m
              memory: 2Gi
            requests:
              cpu: 250m
              memory: .5Gi
      volumes:
        - name: sonarqube-extensions
          persistentVolumeClaim:
            claimName: claim-sonarqube-extensions
        - name: sonarqube-logs
          persistentVolumeClaim:
            claimName: claim-sonarqube-logs
        - name: sonarqube-conf
          persistentVolumeClaim:
            claimName: claim-sonarqube-conf
        - name: sonarqube-data
          persistentVolumeClaim:
            claimName: claim-sonarqube-data
