demo02/apply-sonarqube/sonarqube-svc.yml
apiVersion: v1
kind: Service
metadata:
  labels:
    name: sonarqube
  name: sonarqube
  namespace: sonarqube
spec:
  type: NodePort
  ports:
    - port: 9000
      targetPort: 9000
      nodePort: 30008
      name: sonarport
  selector:
    name: sonarqube
