demo02/apply-sonarqube/sonarqube-ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: sonarqube
  namespace: sonarqube
spec:
  ingressClassName: nginx
  rules:
  - host: sonar.local.com
    http:
       paths:
        - pathType: Prefix
          path: /
          backend:
            service:
              name: sonarqube
              port: 
                number: 9000
